# cmake_hello_world

./: .gitmodules  CMakeLists.txt  README.md
hello/: CMakeLists.txt  Hello.cpp  Hello.h
src/: Hello.cpp  main.cpp
test/: CMakeLists.txt  HelloTest.cpp
